fix slide spacing again

--- a/assets/sass/blinktrade/_slide.scss
+++ b/assets/sass/blinktrade/_slide.scss
@@ -67,7 +67,7 @@
     }
 
     @include media-query(desk) {
-        padding-top: 70px;
+        padding-top: 60px;
     }
 }
 
